github_data_collector/src/data/issue_comment/smallcorgi_Faster-RCNN_TF.txt
I trained the model in python3 on tf_1.13，I need to test the model in python2 on tf_1.4 ,when I run the /lib/fast_rcnn/test.py, then it happens the error:
Traceback (most recent call last):
  File "demo.py", line 24, in <module>
    result, image_framed = ocr.model(image)
  File "/data/wangyl/CTPN_FX_py2/ocr.py", line 84, in model
    text_recs, img_framed,img1 = text_detect(img)
  File "/data/wangyl/CTPN_FX_py2/ctpn/text_detect.py", line 101, in text_detect
    scores, boxes, img1, scale = ctpn(img)
  File "/data/wangyl/CTPN_FX_py2/ctpn/text_detect.py", line 59, in ctpn
    scores, boxes, row = test_ctpn(sess, net, img1)
  File "/data/wangyl/CTPN_FX_py2/ctpn/lib/fast_rcnn/test.py", line 72, in test_ctpn
    rois = sess.run([net.get_output('rois')],feed_dict=feed_dict)
  File "/home/tkocr/.conda/envs/py27_wyl/lib/python2.7/site-packages/tensorflow/python/client/session.py", line 889, in run
    run_metadata_ptr)
  File "/home/tkocr/.conda/envs/py27_wyl/lib/python2.7/site-packages/tensorflow/python/client/session.py", line 1120, in _run
    feed_dict_tensor, options, run_metadata)
  File "/home/tkocr/.conda/envs/py27_wyl/lib/python2.7/site-packages/tensorflow/python/client/session.py", line 1317, in _do_run
    options, run_metadata)
  File "/home/tkocr/.conda/envs/py27_wyl/lib/python2.7/site-packages/tensorflow/python/client/session.py", line 1336, in _do_call
    raise type(e)(node_def, op, message)
tensorflow.python.framework.errors_impl.InvalidArgumentError: <exception str() failed>

I print the net.get_output('rois') and feed_dict both in py2 and p3, they are the same both in data and shape, but it runs OK in py3, occurs error in py2, Why, anyone help me please?
I use my own data to train the model and prompt InvalidArgumentError: Restoring from checkpoint failed. This is most likely due to a mismatch between the current graph and the graph from the checkpoint. Please ensure that you have not altered the graph expected based on the checkpoint. Original error:
when testing
What is wrong?
For getting more accuracy in faster-rcnn , which parameters i have to tune (tuning parameters). please anybody provide the solution for that problem, actually my model is working but the problem is getting less accuracy and some miss classifications are happens , so please kindly provide solution for getting high accuracy in the model.

Thanking you!
python setup.py build_ext --inplace
  File "setup.py", line 84
    print extra_postargs
                       ^
SyntaxError: Missing parentheses in call to 'print'



I run fanster rcnn train model:hyw@hyw-Inspiron-5680:~/PycharmProjects/hyw-DIY/Faster-RCNN_TF$ ./experiments/scripts/faster_rcnn_end2end.sh gpu 0  VGG16 pascal_voc, result a error as follow:
......
<\xe7<*\xbc\xec}\x0e\xbc$b?;\x14Z\x1f;F\xa8\xb6\xbax\x19\xde\xbb\xf1\xd5\xf8;nIN\xbb\xc8,l;\xa5D\x9e\xbc4Z\x98<\x98\x97\xf3:\xb3b;\xa4\x9e7;\xe0\x95\x84;\xc5\xf5\\<\x17\x8eM\xbc5\xe49:\xeb\xb6\xac:%\x06\xb8\xba\xc0\xc2\xa7;\x9c#2; 2\xc3\xbb\x80\xde\x00\xbb\x013"\xbb\xd9S%\xbb\x0f\x8a3\xbc\xb8\x8a\x02<\xe6\xaa\x81\xbb\x13Z\xbc:&6|;\x9f}\xdd;\x14\r\xcc\xb9\\"\x05\xbc\x7fA7\xbb*#3;\x9a\xf2{:X\x0f\x9d\xbb\xad{\xb9\xab\xf6\x88\xbc \xdf\x9e;', 0, 1, 'ordinal not in range(128)')
You may need to pass the encoding= option to numpy.load

 how to fix this error?
when I train the net with python3.6,there have an Error:**ValueError: Tried to convert 'fiter' to a tensor and faild.Error:Shapes must be equal rank,but are 4 and 0.
I don't know why ,anyone help me please?
for demo with pretrained model
What tools do you use to implement c++ code of  roi-pool layer? Is it Qt? thanks！！！